--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "^4.2.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "@reduxjs/toolkit": "^1.7.0",
+    "react-bootstrap": "^2.5.0",
+    "redux-persist": "^6.0.0",
+    "react-toastify": "^9.0.7",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
